fix padding margin issue

--- a/docs/_includes/css/composite.html
+++ b/docs/_includes/css/composite.html
@@ -717,7 +717,23 @@
             <div class="docs-example">
                 <div class="docs-margin-example">
                     <div class="docs-padding-example margin-large padding-medium">
-                        <div class="docs-padding-content-example"></div>
+                        <div class="docs-padding-content-example">
+                            <code>.margin-large .padding-medium</code>
+                        </div>
+                    </div>
+                </div>
+                <div class="docs-margin-example">
+                    <div class="docs-padding-example margin-vertical-large padding-horizontal-medium">
+                        <div class="docs-padding-content-example">
+                            <code>.margin-vertical-large .padding-horizontal-medium</code>
+                        </div>
+                    </div>
+                </div>
+                <div class="docs-margin-example">
+                    <div class="docs-padding-example margin-right-small padding-top-large">
+                        <div class="docs-padding-content-example">
+                            <code>.margin-right-small .padding-top-large</code>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -725,6 +741,8 @@
         <div class="docs-tab-content">
 {% highlight html %}
 <div class="margin-large padding-medium"></div>
+<div class="margin-vertical-large padding-horizontal-medium"></div>
+<div class="margin-right-small padding-top-large"></div>
 {% endhighlight %}
         </div>
     </div>
