--- a/less/mixins/composite.less
+++ b/less/mixins/composite.less
@@ -12,6 +12,8 @@
 .generate-accent(@color:inherit ,@background-color:inherit ,@border-color:inherit){
   background-color: @background-color;
   color: @color;
+  .border-small();
+  .border-solid();
   border-color: @border-color !important;
 }
 
