--- a/less/variables.less
+++ b/less/variables.less
@@ -129,7 +129,7 @@
 @close-font-weight              : bold;
 @close-color                    : #000;
 @close-text-shadow              : 0 1px 0 #fff;
-@close-icon                     : "\f405";
+@close-icon                     : "\f2d7";
 
 /**
  * Component
