fix vertical center issue & default border solid

--- a/less/composite.less
+++ b/less/composite.less
@@ -94,7 +94,7 @@
   margin-right: auto;
 }
 .vertical-center > *{
-    position: relative;
+    position: absolute;
     top: 50%;
     .transform(translateY(-50%))
 }
