--- a/less/components.less
+++ b/less/components.less
@@ -31,6 +31,7 @@
 @import "components/sidebar.less";
 @import "components/modal.less";
 @import "components/off-canvas.less";
+@import "components/panel.less";
 
 /**
  * Block
