--- a/less/components.less
+++ b/less/components.less
@@ -32,6 +32,7 @@
 @import "components/modal.less";
 @import "components/off-canvas.less";
 @import "components/panel.less";
+@import "components/breadcrumbs.less";
 
 /**
  * Block
