--- a/less/variables.less
+++ b/less/variables.less
@@ -504,6 +504,15 @@
 @navbar-inverse-toggle-icon-bar-bg          : #fff;
 @navbar-inverse-toggle-border-color         : #333;
 
+/**
+ * Breadcrumbs
+ */
+@breadcrumb-padding-vertical                : 8px;
+@breadcrumb-padding-horizontal              : 15px;
+@breadcrumb-bg                              : @accent-light;
+@breadcrumb-color                           : @accent-soft;
+@breadcrumb-active-color                    : @accent-neutral;
+@breadcrumb-separator                       : "/";
 
 /**
  * Sidebar
