- add popover element - add tooltip element - add position & html-binding helper

--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -42,6 +42,13 @@
     </ul>
 </li>
 <li>
+    <a href="#tooltip-popover">Popover & Tooltip</a>
+    <ul>
+        <li><a href="#tooltip">Tooltip</a></li>
+        <li><a href="#popover">Popover</a></li>
+    </ul>
+</li>
+<li>
     <a href="#nav">Navigasi</a>
     <ul>
         <li><a href="#nav-tabs">Tab</a></li>
