--- a/less/components.less
+++ b/less/components.less
@@ -30,6 +30,8 @@
 @import "components/navbar.less";
 @import "components/sidebar.less";
 @import "components/modal.less";
+@import "components/popover.less";
+@import "components/tooltip.less";
 @import "components/off-canvas.less";
 @import "components/panel.less";
 @import "components/breadcrumbs.less";
