--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -11,6 +11,7 @@
     <a href="#form">Form</a>
     <ul>
         <li><a href="#form-input-date">Date Picker</a></li>
+        <li><a href="#form-input-time">Time Picker</a></li>
         <li><a href="#form-input-color">Color Picker</a></li>
         <li><a href="#form-input-tag">Input Tag</a></li>
         <li><a href="#form-input-upload">File Uploader</a></li>
