--- a/less/components.less
+++ b/less/components.less
@@ -16,6 +16,7 @@
  */
 // form
 @import "components/forms/date-picker.less";
+@import "components/forms/time-picker.less";
 @import "components/forms/tags-input.less";
 @import "components/forms/auto-complete.less";
 
