- add lussa UI icon sets

--- a/docs/_includes/css/composite.html
+++ b/docs/_includes/css/composite.html
@@ -697,6 +697,40 @@
     </div>
 </div>
 
+<!-- Lussa Icon -->
+<div class="docs-subsection-desc">
+    <h3><span class="ls ls-ui"></span> Icon </h3>
+    <p>
+        Spesial Icon untuk branding lussa teknologi. Berbeda dengan icon umum, lussa icon menggunakan kelas <code>.ls</code> ditambah dengan varian kelas <code>.ls-x</code>, dengan <var>x</var> adalah nama icon.
+    </p>
+</div>
+<div class="docs-tab">
+    <ul class="docs-tab-link-container">
+        <li>tampilan</li>
+        <li>&lt;html&gt;</li>
+    </ul>
+    <div class="docs-tab-content-container">
+        <div class="docs-tab-content">
+            <div class="docs-example">
+                <span class="ls ls-lussa"></span>
+                <span class="ls ls-ui"></span>
+                <span class="ls ls-tarsius"></span>
+                <span class="ls ls-pawang"></span>
+                <span class="ls ls-kandang"></span>
+            </div>
+        </div>
+        <div class="docs-tab-content">
+{% highlight html %}
+<span class="ls ls-lussa"></span>
+<span class="ls ls-ui"></span>
+<span class="ls ls-tarsius"></span>
+<span class="ls ls-pawang"></span>
+<span class="ls ls-kandang"></span>
+{% endhighlight %}
+        </div>
+    </div>
+</div>
+
 <!-- Padding & Margin  -->
 <h2 class="docs-subsection-title" id="composite-padding-margin">Pading & Margin</h2>
 <div class="docs-subsection-desc">
