--- a/less/icons.less
+++ b/less/icons.less
@@ -6,8 +6,13 @@
 
 // Import icon library
 @import "icons/ionicon";
+@import "icons/lussa";
 
 // base icon style
 .icon {
   &:extend(.ionicon-base-style);
+}
+
+.ls {
+  &:extend(.lussaicon-base-style);
 }
