--- a/less/components/dropdown.less
+++ b/less/components/dropdown.less
@@ -1,64 +1,72 @@
 //
 // Dropdown menus
 // --------------------------------------------------
-
 // Dropdown arrow/caret
 .caret {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 2px;
-  vertical-align: middle;
-  border-top:   @caret-width-base dashed;
-  border-top:   @caret-width-base solid ~"\9"; // IE8
-  border-right: @caret-width-base solid transparent;
-  border-left:  @caret-width-base solid transparent;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-top: @caret-width-base dashed;
+    border-top: @caret-width-base solid ~"\9"; // IE8
+    border-right: @caret-width-base solid transparent;
+    border-left: @caret-width-base solid transparent;
 }
 
-dropdown,
-.dropdown {
+dropdown, .dropdown {
     position: relative;
     display: inline-block;
-
     .dropdown-toggle:focus {
         outline: none;
     }
-
+    .dropdown-content, .dropdown-menu {
+        transition: all .3s;
+        height: 0;
+        overflow: hidden;
+        padding: 0;
+        border: none;
+        top: calc(100% - 5px);
+        opacity: 0;
+        &.open {
+            display: block;
+            height: auto;
+            top: 100%;
+            opacity: 1;
+        }
+    }
     .dropdown-content {
         position: absolute;
-        top: 100%;
         left: 0;
         z-index: @zindex-dropdown;
-        display: none;
-        float: left;
         margin: 2px 0 0;
         background-color: @dropdown-bg;
-        border: 1px solid @dropdown-border;
         .border-radius(@border-radius-base);
-        .box-shadow(0 6px 12px rgba(0,0,0,.175));
+        .box-shadow(0 6px 12px rgba(0, 0, 0, .175));
         background-clip: padding-box;
+        &.open {
+            border: 1px solid @dropdown-border;
+        }
     }
-
     // The dropdown menu (ul)
     .dropdown-menu {
         position: absolute;
         top: 100%;
         left: 0;
         z-index: @zindex-dropdown;
-        display: none;
-        float: left;
         min-width: 160px;
-        padding: 5px 0;
         margin: 2px 0 0; // override default ul
         list-style: none;
         font-size: @font-size-base;
         text-align: left;
         background-color: @dropdown-bg;
-        border: 1px solid @dropdown-border;
         .border-radius(@border-radius-base);
-        .box-shadow(0 6px 12px rgba(0,0,0,.175));
+        .box-shadow(0 6px 12px rgba(0, 0, 0, .175));
         background-clip: padding-box;
-
+        &.open {
+            border: 1px solid @dropdown-border;
+            padding: 5px 0;
+        }
         // Aligns the dropdown menu to right
         //
         // Deprecated as of 3.1.0 in favor of `.dropdown-menu-[dir]`
@@ -66,12 +74,10 @@ dropdown,
             right: 0;
             left: auto;
         }
-
         // Dividers (basically an hr) within the dropdown
         .divider {
-        .nav-divider(@dropdown-divider-bg);
+            .nav-divider(@dropdown-divider-bg);
         }
-
         // Links within the dropdown menu
         > li > a {
             .transition(background 0.2s ease, color 0.3s ease);
@@ -82,50 +88,39 @@ dropdown,
             line-height: @line-height-base;
             color: @dropdown-link-color;
             white-space: nowrap;
-            &:hover,
-            &:focus {
+            &:hover, &:focus {
                 text-decoration: none;
                 color: @dropdown-link-hover-color;
                 background-color: @dropdown-link-hover-bg;
             }
         }
-
         > .active > a {
-            &,
-            &:hover,
-            &:focus {
+            &, &:hover, &:focus {
                 color: @dropdown-link-active-color;
                 text-decoration: none;
                 outline: 0;
                 background-color: @dropdown-link-active-bg;
             }
         }
-
         .disabled > a {
-            &,
-            &:hover,
-            &:focus {
+            &, &:hover, &:focus {
                 color: @dropdown-link-disabled-color;
             }
-            &:hover,
-            &:focus {
+            &:hover, &:focus {
                 text-decoration: none;
                 background-color: transparent;
                 background-image: none;
                 cursor: @cursor-disabled;
             }
         }
-
         &.dropdown-menu-right {
             left: auto;
             right: 0;
         }
-
         &.dropdown-menu-left {
             left: 0;
             right: auto;
         }
-
         .dropdown-header {
             display: block;
             padding: 3px 10px;
@@ -134,6 +129,5 @@ dropdown,
             color: @dropdown-header-color;
             white-space: nowrap;
         }
-
     }
 }
